ingressrule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promgrafana
  namespace: ingress-nginx
  labels:
    name: promgrafana
spec:
  ingressClassName: nginx
  rules:
  - host: closetprometheus.strangled.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
  - host: closetgrafana.strangled.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port: 
              number: 3000
